"flower watch" has a repl